@@ -1,12 +1,12 @@
 {
-  "disclaimer": "This data is not real, it was synthetically created to match currency.xml.  It is modeled after the data format available from openexchangerates.org.  See https://openexchangerates.org/documentation for details",
+  "disclaimer": "This data is not real, it was synthetically created to match currency.xml.  It is modeled after the data format available from openexchangerates.org.  See https://openexchangerates.org/documentation for details
+
+
+  IMPORTANT NOTE: In order for tests to work, this data must be kept in sync with ./currency.xml",
+
+
   "license": "http://www.apache.org/licenses/LICENSE-2.0",
   "timestamp": 1332070464,
-
-
-  "IMPORTANT NOTE": "In order for tests to work, this data must be kept in sync with ./currency.xml",
-
-
   "base": "USD",
   "rates": {
     "USD": 1,
